--- a/app/src/main/res/drawable/gray_conner.xml
+++ b/app/src/main/res/drawable/gray_conner.xml
@@ -2,5 +2,5 @@
     <!--圆角半径-->
     <corners android:radius="@dimen/dp_15"/>
     <!--背景颜色，具体颜色自行在color文件设置-->
-    <solid android:color="#cccccc"/>
+    <solid android:color="@color/background"/>
 </shape>
