--- a/app/src/main/res/layout/activity_store.xml
+++ b/app/src/main/res/layout/activity_store.xml
@@ -11,42 +11,43 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center_vertical"
-            android:paddingLeft="@dimen/dp_10"
-            android:fitsSystemWindows="true">
+            android:layout_marginTop="@dimen/dp_30">
             <ImageView
                 android:layout_marginTop="@dimen/dp_10"
                 android:layout_marginBottom="@dimen/dp_10"
-                android:id="@+id/fg_home_iv_scan"
-                android:layout_width="@dimen/dp_22"
-                android:layout_height="@dimen/dp_22"
-                android:src="@drawable/home_scan"
-                android:layout_marginLeft="@dimen/dp_10"/>
+                android:id="@+id/ac_store_iv_back"
+                android:layout_width="@dimen/dp_25"
+                android:layout_height="@dimen/dp_25"
+                android:layout_marginLeft="@dimen/dp_12"
+                android:src="@drawable/white_back"/>
 
             <RelativeLayout
                 android:layout_width="@dimen/dp_246"
                 android:layout_height="@dimen/dp_29"
                 android:layout_marginLeft="@dimen/dp_10"
-                android:background="@drawable/white_conner_5"
-                android:alpha="0.5">
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:background="@drawable/white_conner_5">
                 <ImageView
                     android:layout_width="@dimen/dp_22"
                     android:layout_height="@dimen/dp_22"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="@dimen/dp_10"
                     android:src="@drawable/home_search_gray"/>
-
                 <EditText
-                    android:id="@+id/fg_home_et_search"
+                    android:id="@+id/at_store_et_search"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="@dimen/dp_40"
                     android:background="@null"
-                    android:focusable="false"
                     android:hint="请输入您想要的内容"
+                    android:lines="1"
+                    android:singleLine="true"
+                    android:imeOptions="actionSearch"
                     android:textSize="@dimen/sp_15" />
             </RelativeLayout>
             <LinearLayout
-                android:id="@+id/fg_home_ll_classify"
+                android:id="@+id/ac_store_ll_classify"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/dp_10"
@@ -66,7 +67,7 @@
                     android:textColor="@color/white"/>
             </LinearLayout>
             <ImageView
-                android:id="@+id/fg_home_iv_message"
+                android:id="@+id/ac_store_iv_message"
                 android:layout_width="@dimen/dp_22"
                 android:layout_height="@dimen/dp_22"
                 android:src="@drawable/home_message"
@@ -74,6 +75,7 @@
         </LinearLayout>
     </LinearLayout>
     <LinearLayout
+
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_80"
         android:background="@drawable/white_conner_5"
@@ -82,11 +84,12 @@
         android:layout_marginTop="@dimen/dp_88"
         android:orientation="horizontal">
         <ImageView
-            android:id="@+id/ac_store_xcrriv_img"
+            android:id="@+id/ac_store_iv_img"
             android:layout_width="@dimen/dp_60"
             android:layout_height="@dimen/dp_60"
             android:layout_gravity="center"
             android:src="@drawable/test"
+            android:scaleType="fitXY"
             android:layout_marginLeft="@dimen/dp_10"/>
         <RelativeLayout
             android:layout_width="match_parent"
@@ -178,56 +181,91 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
-        android:layout_marginTop="@dimen/dp_200"
+        android:layout_marginTop="@dimen/dp_180"
         android:orientation="vertical">
+        <!--推荐类-->
         <LinearLayout
+            android:visibility="visible"
+            android:id="@+id/ac_store_ll_tuijian"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_40"
-            android:orientation="horizontal">
-            <TextView
-                android:id="@+id/ac_store_tv_tuijian"
-                android:layout_width="@dimen/dp_0"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:layout_weight="1"
-                android:text="店长推荐"
-                android:textSize="@dimen/sp_15"
-                android:textColor="@color/app_theme"/>
-            <TextView
-                android:id="@+id/ac_store_tv_goods"
-                android:layout_width="@dimen/dp_0"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:layout_weight="1"
-                android:text="全部商品"
-                android:textSize="@dimen/sp_15"
-                android:textColor="@color/text3"/>
-            <RelativeLayout
-                android:id="@+id/ac_store_rl"
-                android:layout_width="@dimen/dp_0"
-                android:layout_height="match_parent"
-                android:layout_weight="1">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_40"
+                android:orientation="horizontal">
                 <TextView
-                    android:id="@+id/ac_store_tv_saleNum"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:text="销量"
+                    android:id="@+id/ac_store_tv_tuijian"
+                    android:layout_width="@dimen/dp_0"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:layout_weight="1"
+                    android:text="店长推荐"
+                    android:textSize="@dimen/sp_15"
+                    android:textColor="@color/app_theme"/>
+                <TextView
+                    android:id="@+id/ac_store_tv_goods"
+                    android:layout_width="@dimen/dp_0"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:layout_weight="1"
+                    android:text="全部商品"
                     android:textSize="@dimen/sp_15"
                     android:textColor="@color/text3"/>
-                <ImageView
-                    android:id="@+id/ac_store_iv_sort"
-                    android:layout_width="@dimen/dp_15"
-                    android:layout_height="@dimen/dp_22"
-                    android:src="@drawable/unselect"
-                    android:layout_centerInParent="true"
-                    android:layout_toRightOf="@id/ac_store_tv_saleNum"
-                    android:layout_marginLeft="@dimen/dp_5"/>
-            </RelativeLayout>
+                <RelativeLayout
+                    android:id="@+id/ac_store_rl"
+                    android:layout_width="@dimen/dp_0"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1">
+                    <TextView
+                        android:id="@+id/ac_store_tv_saleNum"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:text="销量"
+                        android:textSize="@dimen/sp_15"
+                        android:textColor="@color/text3"/>
+                    <ImageView
+                        android:id="@+id/ac_store_iv_sort"
+                        android:layout_width="@dimen/dp_15"
+                        android:layout_height="@dimen/dp_22"
+                        android:src="@drawable/unselect"
+                        android:layout_centerInParent="true"
+                        android:layout_toRightOf="@id/ac_store_tv_saleNum"
+                        android:layout_marginLeft="@dimen/dp_5"/>
+                </RelativeLayout>
+            </LinearLayout>
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/ac_store_rv"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
         </LinearLayout>
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/ac_store_rv"
+        <!--搜索类-->
+        <LinearLayout
+            android:id="@+id/ac_store_ll_search"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:visibility="gone">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_40"
+                android:text="搜索结果"
+                android:gravity="center"
+                android:textColor="@color/text3"
+                android:textSize="@dimen/sp_15"/>
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/ac_store_rv1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+            <TextView
+                android:id="@+id/ac_store_tv_noResult"
+                android:visibility="gone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_50"
+                android:gravity="center"
+                android:text="搜索结果不存在，换个关键词试试？"/>
+        </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
