--- a/app/src/main/res/layout/item_classfiy_detail_goods.xml
+++ b/app/src/main/res/layout/item_classfiy_detail_goods.xml
@@ -9,12 +9,12 @@
     android:background="@drawable/white_conner">
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_180">
+        android:layout_height="@dimen/dp_180"
+        android:background="@drawable/gray_conner">
         <ImageView
             android:id="@+id/item_iv_classfiy_detail_goods"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@mipmap/ic_launcher"/>
+            android:layout_height="match_parent"/>
 
         <LinearLayout
             android:id="@+id/item_classfiy_ll"
