--- a/app/src/main/res/layout/item_my_collect_store.xml
+++ b/app/src/main/res/layout/item_my_collect_store.xml
@@ -71,12 +71,17 @@
         <ImageView
             android:layout_width="@dimen/dp_22"
             android:layout_height="@dimen/dp_22"
-            android:src="@drawable/collect_star"/>
+            android:src="@drawable/collect_star"
+            android:layout_gravity="center"/>
 
         <TextView
             android:id="@+id/item_myCollect_tv_delCollection"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/dp_8"
+            android:paddingRight="@dimen/dp_8"
+            android:paddingTop="@dimen/dp_3"
+            android:paddingBottom="@dimen/dp_3"
             android:text="删除"
             android:background="@drawable/stroke_theme_5"
             android:textColor="@color/app_theme"
