--- a/app/src/main/res/layout/activity_store_manager.xml
+++ b/app/src/main/res/layout/activity_store_manager.xml
@@ -25,6 +25,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
+                    android:focusableInTouchMode="true"
+                    android:focusable="true"
                     android:layout_marginRight="@dimen/dp_12"
                     android:layout_marginLeft="@dimen/dp_12"
                     android:layout_marginTop="@dimen/dp_10"
@@ -91,7 +93,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:background="@null"
-                            android:hint="营业时间:"
+                            android:hint="9:00-12:00  14:00-20:00"
                             android:textColor="@color/text9"
                             android:textSize="@dimen/sp_13"
                             android:layout_marginLeft="@dimen/dp_10"/>
