--- a/app/src/main/res/layout/activity_location_store.xml
+++ b/app/src/main/res/layout/activity_location_store.xml
@@ -17,6 +17,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_45"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:background="@android:color/white">
         <ImageView
             android:id="@+id/at_location_store_locate"
