--- a/app/src/main/res/layout/activity_goods_detail.xml
+++ b/app/src/main/res/layout/activity_goods_detail.xml
@@ -29,7 +29,7 @@
                 <com.youth.banner.Banner
                     android:id="@+id/at_goods_detail_banner"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"></com.youth.banner.Banner>
+                    android:layout_height="match_parent"/>
 
                 <RelativeLayout
                     android:id="@+id/at_goods_detail_rl_sec_kill"
@@ -267,6 +267,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="￥120"
+                    android:textStyle="bold"
                     android:textSize="@dimen/sp_13"
                     android:textColor="@color/app_theme"
                     android:layout_marginLeft="@dimen/dp_12"/>
@@ -634,6 +635,7 @@
         </LinearLayout>
     </ScrollView>
     <LinearLayout
+        android:id="@+id/ac_goodsDetail_ll_bar"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_49"
         android:layout_alignParentBottom="true">
@@ -732,88 +734,103 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="@dimen/dp_80"
-        android:layout_marginRight="@dimen/dp_12"
+        android:layout_marginRight="@dimen/dp_42"
         android:src="@drawable/goods_detail_share"/>
-    <RelativeLayout
-        android:id="@+id/ac_goodsDetail_ll_inncer"
+    <LinearLayout
+        android:id="@+id/ac_goodsDetail_ll_inner"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_472"
-        android:layout_marginLeft="@dimen/dp_40"
-        android:layout_marginRight="@dimen/dp_40"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        android:gravity="center"
+        android:background="@color/background"
         android:layout_centerVertical="true"
-        android:background="@drawable/white_conner_5"
-        android:orientation="vertical"
-        android:visibility="gone">
-        <ImageView
+        android:orientation="vertical">
+        <RelativeLayout
+            android:id="@+id/ac_goodsDetail_ll_inncer"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_300"
-            android:id="@+id/ac_goodsDetail_iv_innerGoodsImg"
+            android:layout_height="@dimen/dp_450"
+            android:layout_marginLeft="@dimen/dp_40"
+            android:layout_marginRight="@dimen/dp_40"
+            android:background="@color/white"
+            android:orientation="vertical"
+            android:visibility="visible">
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_300"
+                android:id="@+id/ac_goodsDetail_iv_innerGoodsImg"
+                android:layout_gravity="center"
+                android:scaleType="fitXY"
+                android:src="@drawable/test"/>
+            <TextView
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/ac_goodsDetail_tv_innerGoodsTitle"
+                android:layout_marginLeft="@dimen/dp_12"
+                android:layout_marginRight="@dimen/dp_12"
+                android:layout_marginTop="@dimen/dp_10"
+                android:layout_below="@id/ac_goodsDetail_iv_innerGoodsImg"
+                android:lines="2"
+                android:ellipsize="end"
+                android:text="异丙甲草胺绿色无污染大豆田玉米田小麦田均可放心使用;会员可享受包邮"/>
+            <TextView
+                android:id="@+id/ac_goodsDetail_tv_innerGoodsPrice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="￥100"
+                android:textStyle="bold"
+                android:textSize="@dimen/sp_15"
+                android:textColor="@color/app_theme"
+                android:layout_centerVertical="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginTop="@dimen/dp_20"
+                android:layout_below="@id/ac_goodsDetail_iv_innerGoodsImg"
+                android:layout_marginRight="@dimen/dp_12"/>
+            <ImageView
+                android:id="@+id/ac_goodsDetail_iv_qrcode"
+                android:layout_width="@dimen/dp_80"
+                android:layout_height="@dimen/dp_80"
+                android:layout_marginLeft="@dimen/dp_12"
+                android:layout_marginTop="@dimen/dp_10"
+                android:src="@drawable/logo"
+                android:layout_below="@id/ac_goodsDetail_tv_innerGoodsTitle" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="1.保存图片至相册"
+                android:layout_marginTop="@dimen/dp_30"
+                android:layout_marginLeft="@dimen/dp_5"
+                android:layout_toRightOf="@id/ac_goodsDetail_iv_qrcode"
+                android:layout_below="@id/ac_goodsDetail_tv_innerGoodsTitle"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="2.农品街扫一扫打开"
+                android:layout_marginTop="@dimen/dp_50"
+                android:layout_marginLeft="@dimen/dp_5"
+                android:layout_toRightOf="@id/ac_goodsDetail_iv_qrcode"
+                android:layout_below="@id/ac_goodsDetail_tv_innerGoodsTitle"/>
+            <ImageView
+                android:layout_width="@dimen/dp_40"
+                android:layout_height="@dimen/dp_40"
+                android:layout_marginLeft="@dimen/dp_12"
+                android:layout_marginTop="@dimen/dp_30"
+                android:layout_marginRight="@dimen/dp_10"
+                android:src="@drawable/logo"
+                android:layout_alignParentRight="true"
+                android:layout_below="@id/ac_goodsDetail_tv_innerGoodsTitle" />
+        </RelativeLayout>
+        <TextView
+            android:id="@+id/ac_goodsDetail_save"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/theme_conner_15"
+            android:text="保存并分享"
+            android:textColor="@color/white"
+            android:layout_marginTop="@dimen/dp_15"
             android:layout_gravity="center"
-            android:scaleType="fitXY"
-            android:src="@drawable/test"/>
-        <TextView
-            android:layout_width="180dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/ac_goodsDetail_tv_innerGoodsTitle"
-            android:layout_marginLeft="@dimen/dp_12"
-            android:layout_marginRight="@dimen/dp_12"
-            android:layout_marginTop="@dimen/dp_10"
-            android:layout_below="@id/ac_goodsDetail_iv_innerGoodsImg"
-            android:lines="2"
-            android:ellipsize="end"
-            android:text="异丙甲草胺绿色无污染大豆田玉米田小麦田均可放心使用;会员可享受包邮"/>
-        <TextView
-            android:id="@+id/ac_goodsDetail_tv_innerGoodsPrice"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="￥100"
-            android:textStyle="bold"
-            android:textSize="@dimen/sp_15"
-            android:textColor="@color/app_theme"
-            android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginTop="@dimen/dp_20"
-            android:layout_below="@id/ac_goodsDetail_iv_innerGoodsImg"
-            android:layout_marginRight="@dimen/dp_12"/>
-        <ImageView
-            android:id="@+id/ac_goodsDetail_iv_qrcode"
-            android:layout_width="@dimen/dp_80"
-            android:layout_height="@dimen/dp_80"
-            android:layout_marginLeft="@dimen/dp_12"
-            android:layout_marginTop="@dimen/dp_10"
-            android:src="@drawable/logo"
-            android:layout_below="@id/ac_goodsDetail_tv_innerGoodsTitle" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="1.保存图片至相册"
-            android:layout_marginTop="@dimen/dp_30"
-            android:layout_marginLeft="@dimen/dp_5"
-            android:layout_toRightOf="@id/ac_goodsDetail_iv_qrcode"
-            android:layout_below="@id/ac_goodsDetail_tv_innerGoodsTitle"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="2.农品街扫一扫打开"
-            android:layout_marginTop="@dimen/dp_50"
-            android:layout_marginLeft="@dimen/dp_5"
-            android:layout_toRightOf="@id/ac_goodsDetail_iv_qrcode"
-            android:layout_below="@id/ac_goodsDetail_tv_innerGoodsTitle"/>
-        <ImageView
-            android:layout_width="@dimen/dp_40"
-            android:layout_height="@dimen/dp_40"
-            android:layout_marginLeft="@dimen/dp_12"
-            android:layout_marginTop="@dimen/dp_30"
-            android:layout_marginRight="@dimen/dp_10"
-            android:src="@drawable/logo"
-            android:layout_alignParentRight="true"
-            android:layout_below="@id/ac_goodsDetail_tv_innerGoodsTitle" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="@dimen/dp_10"
-            android:text="保存并分享"/>
-    </RelativeLayout>
+            android:paddingLeft="@dimen/dp_20"
+            android:paddingRight="@dimen/dp_20"
+            android:paddingTop="@dimen/dp_8"
+            android:paddingBottom="@dimen/dp_8"/>
+    </LinearLayout>
 </RelativeLayout>
