--- a/app/src/main/res/layout/item_spokesman_quanli.xml
+++ b/app/src/main/res/layout/item_spokesman_quanli.xml
@@ -1,30 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-    <com.zthx.npj.view.MyCircleView
-        android:id="@+id/item_spokesman_quanli_pic"
-        android:layout_width="@dimen/dp_28"
-        android:layout_height="@dimen/dp_28"
-        android:layout_marginTop="@dimen/dp_7"
-        android:layout_marginLeft="@dimen/dp_12"
-        android:background="@mipmap/ic_launcher"/>
-
-
-    <TextView
-        android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/item_spokesman_quanli_tv_title"
-        android:layout_toRightOf="@id/item_spokesman_quanli_pic"
-        android:layout_alignTop="@id/item_spokesman_quanli_pic"
-        android:text="发布自己的礼包"
-        android:textSize="@dimen/sp_16"
-        android:textColor="@color/text3"
-        android:layout_marginTop="@dimen/dp_3"
-        android:layout_marginLeft="@dimen/dp_9"/>
-
+        android:gravity="center_vertical"
+        android:layout_marginTop="@dimen/dp_8"
+        android:orientation="horizontal">
+        <com.zthx.npj.view.MyCircleView
+            android:id="@+id/item_spokesman_quanli_pic"
+            android:layout_width="@dimen/dp_28"
+            android:layout_height="@dimen/dp_28"
+            android:layout_marginLeft="@dimen/dp_12"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/item_spokesman_quanli_tv_title"
+            android:layout_toRightOf="@id/item_spokesman_quanli_pic"
+            android:layout_alignTop="@id/item_spokesman_quanli_pic"
+            android:text="发布自己的礼包"
+            android:textSize="@dimen/sp_16"
+            android:textColor="@color/text3"
+            android:layout_marginLeft="@dimen/dp_9"/>
+    </LinearLayout>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -34,7 +35,10 @@
         android:text="您可将你销售的商品的发布为礼包，推荐的用户进入礼包店后第一个看到的商品为您发布的商品"
         android:textColor="@color/text6"
         android:textSize="@dimen/sp_15"
+        android:lines="2"
+        android:ellipsize="end"
         android:layout_marginTop="@dimen/dp_7"
+        android:layout_marginLeft="@dimen/dp_12"
         android:layout_marginRight="@dimen/dp_12"/>
 
     <View
@@ -46,6 +50,4 @@
         android:layout_marginTop="@dimen/dp_5"
         android:layout_below="@id/item_spokesman_quanli_tv_content"></View>
 
-
-
-</RelativeLayout>
+</LinearLayout>
