--- a/app/src/main/res/layout/activity_goods_search.xml
+++ b/app/src/main/res/layout/activity_goods_search.xml
@@ -10,6 +10,7 @@
 
 
     <RelativeLayout
+        android:layout_marginTop="@dimen/dp_30"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_47"
         android:orientation="horizontal">
