--- a/app/src/main/res/layout/activity_spokesman_rights.xml
+++ b/app/src/main/res/layout/activity_spokesman_rights.xml
@@ -22,8 +22,7 @@
                 android:layout_width="@dimen/dp_50"
                 android:layout_height="@dimen/dp_50"
                 android:layout_marginLeft="@dimen/dp_165"
-                android:layout_marginTop="@dimen/dp_45"
-                android:src="@drawable/logo"/>
+                android:layout_marginTop="@dimen/dp_45"/>
             <TextView
                 android:id="@+id/ac_spokesman_tv_userName"
                 android:layout_marginLeft="@dimen/dp_160"
@@ -114,6 +113,7 @@
                     android:layout_marginRight="@dimen/dp_12"/>
 
                 <TextView
+                    android:id="@+id/ac_spokesman_tv_addGift"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_toLeftOf="@id/iv_gogogo1"
@@ -176,6 +176,7 @@
                     android:layout_marginRight="@dimen/dp_12"/>
 
                 <TextView
+                    android:id="@+id/ac_spokesman_tv_ruzhu"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_toLeftOf="@id/iv_gogogo3"
@@ -238,6 +239,7 @@
                     android:layout_marginRight="@dimen/dp_12"/>
 
                 <TextView
+                    android:id="@+id/ac_spokesman_tv_shopping"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_toLeftOf="@id/iv_gogogo2"
@@ -300,6 +302,7 @@
                     android:layout_marginRight="@dimen/dp_12"/>
 
                 <TextView
+                    android:id="@+id/ac_spokesman_tv_generateHB"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_toLeftOf="@id/iv_gogogo4"
